hphp/test/zend/good/tests/classes/visibility_002a.php.expectf

Fatal error: Access level to fail::f2() must be public (as in class same) or weaker in %s/visibility_002a.php on line 21
